@@ -1,3 +1,5 @@
+7.feb (tb)
+      - updated French translation by JLWaltener
 6.feb (ws)
       - moved functionality from text palette (F2) to a context toolbar "edit tools"
         and to "text properties" dialog
